--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ core-foundation = "0.10.1"
 core-foundation-sys = "0.8.4"
 io-kit-sys = "0.4.0"
 
+[target.'cfg(target_os="freebsd")'.dependencies]
+
+
 [target.'cfg(any(target_os="linux", target_os="android", target_os="windows", target_os="macos"))'.dependencies]
 blocking = { version = "1.6.1", optional = true }
 tokio = { version = "1", optional = true, features = ["rt"] }
