--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ core-foundation-sys = "0.8.4"
 io-kit-sys = "0.4.0"
 
 [target.'cfg(target_os="freebsd")'.dependencies]
-
+rustix = { version = "1.0.1", features = ["fs", "event", "net", "time", "mm"] }
 
 [target.'cfg(any(target_os="linux", target_os="android", target_os="windows", target_os="macos"))'.dependencies]
 blocking = { version = "1.6.1", optional = true }
